[package]
name = "silent-success"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
calm_io = "0.1.1"
clap = { version = "4.4.15", features = ["derive", "wrap_help"] }
miette = { version = "5.10.0", default-features = false, features = ["fancy-no-backtrace"] }
